# DuckyMousekeys

./: LICENSE  README.md  ducky-mousekeys.cabal  stack.yaml
src/: Events.hs  FFI.hsc  Main.hs  XDoTool.hs
