name:                ducky-mousekeys
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CameronDiver/ducky-mousekeys#readme
license:             BSD3
license-file:        LICENSE
author:              Cameron Diver
maintainer:          cameron.diver94@gmail.com
copyright:           2020 Cameron Diver
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ducky-mousekeys
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Events
                     , FFI
                     , XDoTool
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , process
                     , split
                     , bytestring
                     , binary
                     , regex-compat

